# rusty-server

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.local.yml
scripts/: init.sql  run-psql.sh  run-supertokens.sh
src/: main.rs  services.rs
src/models/: auth.rs  user.rs
