[package]
name = "rusty_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4"
sqlx = { version = "0.6.2", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono"
] }
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
# Automatically strips symbols from the resulting binary
# See https://doc.rust-lang.org/cargo/reference/profiles.html#strip
strip = true
# Binary optimization level / type
# See https://doc.rust-lang.org/cargo/reference/profiles.html#opt-level
opt-level = "s"
# Link time optimization
# https://doc.rust-lang.org/cargo/reference/profiles.html#lto
lto = true
# Maximize size reduction optimizations
# See https://doc.rust-lang.org/cargo/reference/profiles.html#codegen-units
codegen-units = 1
